// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
  text-transform: none;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  text-transform: none;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.07);
}

.c12:active {
  background: rgba(255,255,255,0.13);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first application to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Application Access provides secure access to internal applications.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add Resource
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/application-access/getting-started/"
            kind="border"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c31 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c31:hover,
.c31:focus {
  background: rgba(255,255,255,0.07);
}

.c31:active {
  background: rgba(255,255,255,0.13);
}

.c31:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c37 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 90px;
  text-transform: none;
}

.c37:hover,
.c37:focus {
  background: rgba(255,255,255,0.07);
}

.c37:active {
  background: rgba(255,255,255,0.13);
}

.c37:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c41 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c41:hover:enabled,
.c41:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c41:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c43 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c43:disabled {
  color: rgba(255,255,255,0.36);
}

.c43:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c43:hover:enabled,
.c43:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c43:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c38 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c14 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c23 {
  box-sizing: border-box;
  display: flex;
}

.c27 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c33 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #e64a19;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c34 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #388e3c;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c35 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c36 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c40 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c20 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c20:hover {
  cursor: pointer;
}

.c25 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th svg {
  height: 12px;
}

.c25 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c25 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c25 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c39 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c30 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c30:hover {
  background-color: rgba(255,255,255,0.13);
}

.c42 svg {
  font-size: 20px;
}

.c42 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      kind="danger"
    >
      <div>
        some error message
      </div>
    </div>
    <div
      class="c4"
    >
      <form
        class="c5"
      >
        <div
          class="c6"
          width="100%"
        >
          <div
            class="c7"
            style="width: 70%;"
          >
            <div
              class="c8"
              width="100%"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <input
                    class="c11"
                    placeholder="SEARCH..."
                    value=""
                  />
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <label
                          class="c15"
                        >
                          <input
                            class="c16"
                            type="checkbox"
                          />
                          <div
                            class="c17 c18"
                          />
                        </label>
                        <div
                          class="c19"
                        >
                          Advanced
                        </div>
                        <span
                          class="c20"
                          role="icon"
                        >
                          <span
                            class="c21 c22"
                          >
                            <svg
                              fill="currentColor"
                              height="20"
                              viewBox="0 0 24 24"
                              width="20"
                            >
                              <path
                                d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                              />
                              <path
                                d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c23"
          >
            <div
              class="c24"
              color="text.main"
              style="text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                11
              </strong>
               of
               
              <strong>
                11
              </strong>
            </div>
          </div>
        </div>
      </form>
      <table
        class="c25 c26"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            />
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Name
                <span
                  class="c21 icon icon-chevronup"
                  title="sort items asc"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Description
                <span
                  class="c21 icon icon-chevronsvertical"
                  title="sort items"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                    />
                    <path
                      d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              style="cursor: default;"
            >
              Address
            </th>
            <th
              style="cursor: default;"
            >
              Labels
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c27"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  J
                </div>
              </div>
            </td>
            <td>
              Jenkins
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TheOtherOne
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  icon: jenkins
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/jenkins.two/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c33"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  G
                </div>
              </div>
            </td>
            <td>
              Grafana
            </td>
            <td>
              This is a Grafana app
            </td>
            <td>
              https://grafana.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/g.one/one/grafana.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c34"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  1
                </div>
              </div>
            </td>
            <td>
              11llkk2234234
            </td>
            <td>
              Teleport Okta
            </td>
            <td>
              https://234.dev-test.teleport
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  okta/org: https://dev-test.okta.com
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  teleport.dev/origin: okta
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/234.dev-test.teleport/dev-test.teleport/234.dev-test.teleport"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Company Chat
            </td>
            <td>
              This is the employee slack channel
            </td>
            <td>
              https://slack.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  icon: slack
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/s.one/one/slack.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  s
                </div>
              </div>
            </td>
            <td>
              saml_app
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c29"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="http://localhost/enterprise/saml-idp/login/saml_app"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  o
                </div>
              </div>
            </td>
            <td>
              okta
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c29"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="http://localhost/enterprise/saml-idp/login/okta"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  M
                </div>
              </div>
            </td>
            <td>
              Mattermost1
            </td>
            <td>
              This is a Mattermost app
            </td>
            <td>
              https://mattermost.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TCP
            </td>
            <td>
              This is a TCP app
            </td>
            <td>
              tcp://some-address
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c31"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <span
                  class="c21 icon icon-amazonaws"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M7.19944 10.7777C7.19944 11.049 7.22877 11.2681 7.28011 11.4285C7.33879 11.5899 7.41211 11.7659 7.51479 11.9566C7.55146 12.0143 7.56612 12.073 7.56612 12.1243C7.56612 12.1976 7.52211 12.271 7.42679 12.3443L6.96571 12.6514C6.91266 12.69 6.84696 12.7143 6.77576 12.7174L6.77503 12.7174C6.70171 12.7174 6.62836 12.6807 6.55596 12.6147C6.46091 12.5127 6.37416 12.4003 6.29838 12.2803L6.29288 12.271C6.22585 12.1595 6.15007 12.0181 6.08027 11.8731L6.06553 11.8392C5.49535 12.512 4.7776 12.8485 3.9141 12.8485C3.29992 12.8485 2.80951 12.6734 2.45109 12.3223C2.09266 11.9703 1.91026 11.5028 1.91026 10.917C1.91026 10.2955 2.12934 9.78952 2.57576 9.41002C3.02219 9.02959 3.61434 8.83894 4.36785 8.83894C4.61718 8.83894 4.87293 8.86094 5.14335 8.89761C5.41468 8.93429 5.69336 8.99294 5.98486 9.05894V8.52451C5.98486 7.96809 5.86843 7.58033 5.64111 7.35393C5.40735 7.1266 5.01228 7.01751 4.44943 7.01751C4.19275 7.01751 3.92875 7.04593 3.65835 7.11193C3.38794 7.17793 3.12392 7.2586 2.86817 7.36126C2.79901 7.39346 2.71391 7.42586 2.62634 7.45267L2.61149 7.45658C2.5771 7.46808 2.53733 7.47564 2.4961 7.47764L2.49507 7.47768C2.39239 7.47768 2.34107 7.40435 2.34107 7.25126V6.89283C2.34107 6.7755 2.35574 6.6875 2.39239 6.63616C2.44718 6.57063 2.51591 6.51864 2.5942 6.48445L2.59772 6.48308C2.85347 6.35108 3.16055 6.24108 3.51898 6.15308C3.84921 6.06503 4.22837 6.01446 4.61932 6.01446C4.63404 6.01446 4.64872 6.01452 4.66339 6.01467L4.66113 6.01465C5.53196 6.01465 6.16814 6.21265 6.57789 6.60773C6.98032 7.00191 7.18472 7.60231 7.18472 8.40716L7.19944 10.7777ZM4.22942 11.8906C4.4705 11.8906 4.71893 11.8466 4.98293 11.7586C5.24601 11.6705 5.48068 11.5101 5.67776 11.291C5.79508 11.1517 5.88308 10.9977 5.92708 10.8217C5.97016 10.6466 6.00041 10.434 6.00041 10.1855V9.87846C5.81882 9.83137 5.59025 9.78769 5.35757 9.75712L5.32666 9.75381C5.12051 9.72616 4.88189 9.71018 4.63961 9.70981H4.63915C4.14873 9.70981 3.79032 9.80514 3.54832 10.0031C3.30725 10.2002 3.19082 10.478 3.19082 10.8437C3.19082 11.1875 3.2779 11.4441 3.46125 11.6192C3.63632 11.8026 3.89207 11.8906 4.22942 11.8906ZM10.1053 12.6807C9.97328 12.6807 9.88528 12.6587 9.8266 12.6074C9.76793 12.5634 9.7166 12.4607 9.6726 12.3223L7.95385 6.66555C7.92265 6.58023 7.8994 6.48087 7.88834 6.37785L7.88784 6.3722C7.88784 6.25487 7.94652 6.18887 8.06292 6.18887H8.78068C8.9191 6.18887 9.01443 6.21179 9.06485 6.2622C9.12443 6.3062 9.16843 6.40887 9.21153 6.5482L10.4417 11.3919L11.583 6.5482C11.6196 6.40152 11.6636 6.3062 11.7214 6.2622C11.7963 6.2156 11.8871 6.18795 11.9845 6.18795C11.9951 6.18795 12.0057 6.18827 12.0162 6.18893L12.0147 6.18887H12.5995C12.7389 6.18887 12.8342 6.21179 12.8929 6.2622C12.9506 6.3062 13.0029 6.40887 13.0313 6.5482L14.1872 11.4505L15.4532 6.5482C15.4972 6.40152 15.5485 6.3062 15.5998 6.2622C15.6722 6.21562 15.7605 6.18795 15.8553 6.18795C15.8657 6.18795 15.8761 6.18829 15.8863 6.18893L15.8849 6.18887H16.566C16.6824 6.18887 16.7493 6.24845 16.7493 6.3722C16.7493 6.40887 16.7411 6.44552 16.7338 6.48952C16.7207 6.55954 16.703 6.62105 16.68 6.67996L16.6824 6.67287L14.9197 12.3287C14.8757 12.4754 14.8243 12.5698 14.7657 12.6138C14.6943 12.6602 14.607 12.6878 14.5132 12.6878C14.5043 12.6878 14.4955 12.6876 14.4867 12.6871L14.4879 12.6872H13.8581C13.7197 12.6872 13.6244 12.6652 13.5648 12.6138C13.5071 12.5625 13.4557 12.4672 13.4273 12.3205L12.2925 7.60148L11.165 12.3132C11.1283 12.4598 11.0852 12.5552 11.0275 12.6065C10.9679 12.6578 10.8652 12.6798 10.7342 12.6798L10.1053 12.6807ZM19.5067 12.8778C19.1262 12.8778 18.7458 12.8338 18.3801 12.7467C18.0143 12.6587 17.7292 12.5634 17.5386 12.4534C17.4212 12.3883 17.3415 12.315 17.3121 12.249C17.2848 12.1886 17.2686 12.1181 17.2681 12.0438V11.6706C17.2681 11.5175 17.3268 11.4441 17.4359 11.4441C17.4799 11.4441 17.5239 11.4515 17.5679 11.4661C17.6119 11.4808 17.6779 11.5101 17.7512 11.5395C17.9996 11.6495 18.27 11.7366 18.5561 11.7952C18.8485 11.8539 19.1336 11.8832 19.4269 11.8832C19.8871 11.8832 20.2464 11.8026 20.4948 11.6412C20.7245 11.5007 20.8755 11.2512 20.8755 10.9665C20.8755 10.9594 20.8754 10.9524 20.8752 10.9454L20.8752 10.9464C20.8754 10.9404 20.8755 10.9332 20.8755 10.9261C20.8755 10.7351 20.8003 10.5616 20.6779 10.4337L20.6782 10.434C20.5462 10.2955 20.2968 10.1709 19.9384 10.0535L18.8778 9.72354C18.3434 9.55579 17.9483 9.30736 17.7072 8.97829C17.4802 8.68827 17.3425 8.3188 17.3406 7.91723V7.91678C17.3406 7.6097 17.4075 7.33928 17.5386 7.1046C17.6706 6.87085 17.8456 6.66552 18.0656 6.5051C18.2856 6.33643 18.5331 6.21177 18.8265 6.12467C19.1198 6.03667 19.4269 6 19.7487 6C19.9091 6 20.0777 6.00733 20.2391 6.02933C20.4068 6.05133 20.5599 6.08065 20.7139 6.11C20.8606 6.14667 20.9999 6.18333 21.131 6.22642C21.263 6.27043 21.3657 6.31443 21.439 6.35843C21.5271 6.40341 21.6007 6.46525 21.6579 6.54023L21.659 6.54177C21.7002 6.60307 21.7248 6.67854 21.7248 6.75976C21.7248 6.76788 21.7245 6.77596 21.724 6.78395L21.7241 6.78285V7.1266C21.7241 7.2806 21.6654 7.36128 21.5554 7.36128C21.4519 7.34912 21.3579 7.31797 21.2738 7.2713L21.2776 7.27328C20.8796 7.09292 20.4145 6.98779 19.9249 6.98779C19.9068 6.98779 19.8886 6.98794 19.8706 6.98822L19.8733 6.98818C19.4562 6.98818 19.1262 7.05326 18.8998 7.1926C18.6725 7.33193 18.5561 7.54368 18.5561 7.84343C18.5561 8.04876 18.6294 8.22476 18.7761 8.36319C18.9218 8.50251 19.1922 8.64186 19.58 8.76651L20.6195 9.09469C21.1457 9.26336 21.527 9.49802 21.7534 9.79777C21.9798 10.0975 22.0898 10.4413 22.0898 10.8217C22.0898 11.1361 22.0238 11.4221 21.9001 11.6705C21.7681 11.9199 21.5921 12.139 21.3657 12.315C21.1383 12.4983 20.8679 12.6294 20.5535 12.7247C20.2235 12.8265 19.8807 12.8778 19.5067 12.8778V12.8778ZM20.8899 16.4345C18.4827 18.2128 14.9847 19.1561 11.978 19.1561C7.76319 19.1561 3.96633 17.5978 1.09716 15.0072C0.870734 14.8028 1.07516 14.5242 1.34649 14.6855C4.4485 16.4849 8.2756 17.5758 12.2338 17.5758C14.905 17.5758 17.8383 17.0193 20.5388 15.8781C20.9413 15.6947 21.285 16.1411 20.8899 16.4345ZM21.8928 15.2923C21.5848 14.8981 19.8578 15.1026 19.0749 15.1979C18.8412 15.2272 18.8045 15.0219 19.0172 14.8679C20.3922 13.9026 22.6536 14.1804 22.9167 14.5021C23.1798 14.8321 22.8434 17.0927 21.5554 18.1752C21.3584 18.3439 21.1677 18.2559 21.2557 18.0368C21.549 17.3126 22.1999 15.681 21.8928 15.2923Z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td>
              aws-console-1
            </td>
            <td>
              This is an AWS Console app
            </td>
            <td>
              https://awsconsole-1.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  aws_account_id: A1234
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c37"
                kind="border"
                width="90px"
              >
                Launch
                <span
                  class="c38 icon icon-chevrondown"
                  color="text.slightlyMuted"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Cloud
            </td>
            <td>
              This is a Cloud specific app
            </td>
            <td>
              cloud://some-address
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c31"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        class="c39"
      >
        <div
          class="c40"
          width="100%"
        >
          <div
            class="c23"
          >
            <button
              class="c41 c42"
              title="Previous page"
            >
              <span
                class="c21 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c43 c42"
              title="Next page"
            >
              <span
                class="c21 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
  text-transform: none;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c31 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c31:hover,
.c31:focus {
  background: rgba(255,255,255,0.07);
}

.c31:active {
  background: rgba(255,255,255,0.13);
}

.c31:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c37 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 90px;
  text-transform: none;
}

.c37:hover,
.c37:focus {
  background: rgba(255,255,255,0.07);
}

.c37:active {
  background: rgba(255,255,255,0.13);
}

.c37:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c41 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
}

.c41:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c41:hover:enabled,
.c41:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c41:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c43 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c43:disabled {
  color: rgba(255,255,255,0.36);
}

.c43:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c43:hover:enabled,
.c43:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c43:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c38 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c14 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c23 {
  box-sizing: border-box;
  display: flex;
}

.c27 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #0097a7;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c32 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #1976d2;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c33 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #e64a19;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c34 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #388e3c;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c35 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #f57c00;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c36 {
  box-sizing: border-box;
  height: 32px;
  width: 32px;
  background-color: #00796b;
  border-radius: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c40 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c22 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c20 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c20:hover {
  cursor: pointer;
}

.c25 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th svg {
  height: 12px;
}

.c25 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c25 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c25 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c39 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c30 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c30:hover {
  background-color: rgba(255,255,255,0.13);
}

.c42 svg {
  font-size: 20px;
}

.c42 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c3"
          kind="primary"
          title=""
          width="240px"
        >
          Add application
        </button>
      </a>
    </div>
    <div
      class="c4"
    >
      <form
        class="c5"
      >
        <div
          class="c6"
          width="100%"
        >
          <div
            class="c7"
            style="width: 70%;"
          >
            <div
              class="c8"
              width="100%"
            >
              <div
                class="c9"
              >
                <div
                  class="c10"
                >
                  <input
                    class="c11"
                    placeholder="SEARCH..."
                    value=""
                  />
                  <div
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      <div
                        class="c14"
                      >
                        <label
                          class="c15"
                        >
                          <input
                            class="c16"
                            type="checkbox"
                          />
                          <div
                            class="c17 c18"
                          />
                        </label>
                        <div
                          class="c19"
                        >
                          Advanced
                        </div>
                        <span
                          class="c20"
                          role="icon"
                        >
                          <span
                            class="c21 c22"
                          >
                            <svg
                              fill="currentColor"
                              height="20"
                              viewBox="0 0 24 24"
                              width="20"
                            >
                              <path
                                d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                              />
                              <path
                                d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c23"
          >
            <div
              class="c24"
              color="text.main"
              style="text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                11
              </strong>
               of
               
              <strong>
                11
              </strong>
            </div>
          </div>
        </div>
      </form>
      <table
        class="c25 c26"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            />
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Name
                <span
                  class="c21 icon icon-chevronup"
                  title="sort items asc"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th>
              <a
                style="display: flex; align-items: center;"
              >
                Description
                <span
                  class="c21 icon icon-chevronsvertical"
                  title="sort items"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M12.5303 2.46967C12.2374 2.17678 11.7626 2.17678 11.4697 2.46967L6.96967 6.96967C6.67678 7.26256 6.67678 7.73744 6.96967 8.03033C7.26256 8.32322 7.73744 8.32322 8.03033 8.03033L12 4.06066L15.9697 8.03033C16.2626 8.32322 16.7374 8.32322 17.0303 8.03033C17.3232 7.73744 17.3232 7.26256 17.0303 6.96967L12.5303 2.46967Z"
                    />
                    <path
                      d="M8.03033 15.9697C7.73744 15.6768 7.26256 15.6768 6.96967 15.9697C6.67678 16.2626 6.67678 16.7374 6.96967 17.0303L11.4697 21.5303C11.7626 21.8232 12.2374 21.8232 12.5303 21.5303L17.0303 17.0303C17.3232 16.7374 17.3232 16.2626 17.0303 15.9697C16.7374 15.6768 16.2626 15.6768 15.9697 15.9697L12 19.9393L8.03033 15.9697Z"
                    />
                  </svg>
                </span>
              </a>
            </th>
            <th
              style="cursor: default;"
            >
              Address
            </th>
            <th
              style="cursor: default;"
            >
              Labels
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c27"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  J
                </div>
              </div>
            </td>
            <td>
              Jenkins
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TheOtherOne
            </td>
            <td>
              This is a Jenkins app
            </td>
            <td>
              https://jenkins.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  icon: jenkins
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/jenkins.two/one/jenkins.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c33"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  G
                </div>
              </div>
            </td>
            <td>
              Grafana
            </td>
            <td>
              This is a Grafana app
            </td>
            <td>
              https://grafana.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/g.one/one/grafana.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c34"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  1
                </div>
              </div>
            </td>
            <td>
              11llkk2234234
            </td>
            <td>
              Teleport Okta
            </td>
            <td>
              https://234.dev-test.teleport
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  okta/org: https://dev-test.okta.com
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  teleport.dev/origin: okta
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/234.dev-test.teleport/dev-test.teleport/234.dev-test.teleport"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Company Chat
            </td>
            <td>
              This is the employee slack channel
            </td>
            <td>
              https://slack.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: prod
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  icon: slack
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/s.one/one/slack.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  s
                </div>
              </div>
            </td>
            <td>
              saml_app
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c29"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="http://localhost/enterprise/saml-idp/login/saml_app"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  o
                </div>
              </div>
            </td>
            <td>
              okta
            </td>
            <td>
              SAML Application
            </td>
            <td />
            <td>
              <div
                class="c29"
              />
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="http://localhost/enterprise/saml-idp/login/okta"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LOGIN
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  M
                </div>
              </div>
            </td>
            <td>
              Mattermost1
            </td>
            <td>
              This is a Mattermost app
            </td>
            <td>
              https://mattermost.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <a
                class="c31"
                href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
                kind="border"
                rel="noreferrer"
                target="_blank"
                width="88px"
              >
                LAUNCH
              </a>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c36"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  T
                </div>
              </div>
            </td>
            <td>
              TCP
            </td>
            <td>
              This is a TCP app
            </td>
            <td>
              tcp://some-address
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c31"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c35"
                height="32px"
                width="32px"
              >
                <span
                  class="c21 icon icon-amazonaws"
                >
                  <svg
                    fill="currentColor"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M7.19944 10.7777C7.19944 11.049 7.22877 11.2681 7.28011 11.4285C7.33879 11.5899 7.41211 11.7659 7.51479 11.9566C7.55146 12.0143 7.56612 12.073 7.56612 12.1243C7.56612 12.1976 7.52211 12.271 7.42679 12.3443L6.96571 12.6514C6.91266 12.69 6.84696 12.7143 6.77576 12.7174L6.77503 12.7174C6.70171 12.7174 6.62836 12.6807 6.55596 12.6147C6.46091 12.5127 6.37416 12.4003 6.29838 12.2803L6.29288 12.271C6.22585 12.1595 6.15007 12.0181 6.08027 11.8731L6.06553 11.8392C5.49535 12.512 4.7776 12.8485 3.9141 12.8485C3.29992 12.8485 2.80951 12.6734 2.45109 12.3223C2.09266 11.9703 1.91026 11.5028 1.91026 10.917C1.91026 10.2955 2.12934 9.78952 2.57576 9.41002C3.02219 9.02959 3.61434 8.83894 4.36785 8.83894C4.61718 8.83894 4.87293 8.86094 5.14335 8.89761C5.41468 8.93429 5.69336 8.99294 5.98486 9.05894V8.52451C5.98486 7.96809 5.86843 7.58033 5.64111 7.35393C5.40735 7.1266 5.01228 7.01751 4.44943 7.01751C4.19275 7.01751 3.92875 7.04593 3.65835 7.11193C3.38794 7.17793 3.12392 7.2586 2.86817 7.36126C2.79901 7.39346 2.71391 7.42586 2.62634 7.45267L2.61149 7.45658C2.5771 7.46808 2.53733 7.47564 2.4961 7.47764L2.49507 7.47768C2.39239 7.47768 2.34107 7.40435 2.34107 7.25126V6.89283C2.34107 6.7755 2.35574 6.6875 2.39239 6.63616C2.44718 6.57063 2.51591 6.51864 2.5942 6.48445L2.59772 6.48308C2.85347 6.35108 3.16055 6.24108 3.51898 6.15308C3.84921 6.06503 4.22837 6.01446 4.61932 6.01446C4.63404 6.01446 4.64872 6.01452 4.66339 6.01467L4.66113 6.01465C5.53196 6.01465 6.16814 6.21265 6.57789 6.60773C6.98032 7.00191 7.18472 7.60231 7.18472 8.40716L7.19944 10.7777ZM4.22942 11.8906C4.4705 11.8906 4.71893 11.8466 4.98293 11.7586C5.24601 11.6705 5.48068 11.5101 5.67776 11.291C5.79508 11.1517 5.88308 10.9977 5.92708 10.8217C5.97016 10.6466 6.00041 10.434 6.00041 10.1855V9.87846C5.81882 9.83137 5.59025 9.78769 5.35757 9.75712L5.32666 9.75381C5.12051 9.72616 4.88189 9.71018 4.63961 9.70981H4.63915C4.14873 9.70981 3.79032 9.80514 3.54832 10.0031C3.30725 10.2002 3.19082 10.478 3.19082 10.8437C3.19082 11.1875 3.2779 11.4441 3.46125 11.6192C3.63632 11.8026 3.89207 11.8906 4.22942 11.8906ZM10.1053 12.6807C9.97328 12.6807 9.88528 12.6587 9.8266 12.6074C9.76793 12.5634 9.7166 12.4607 9.6726 12.3223L7.95385 6.66555C7.92265 6.58023 7.8994 6.48087 7.88834 6.37785L7.88784 6.3722C7.88784 6.25487 7.94652 6.18887 8.06292 6.18887H8.78068C8.9191 6.18887 9.01443 6.21179 9.06485 6.2622C9.12443 6.3062 9.16843 6.40887 9.21153 6.5482L10.4417 11.3919L11.583 6.5482C11.6196 6.40152 11.6636 6.3062 11.7214 6.2622C11.7963 6.2156 11.8871 6.18795 11.9845 6.18795C11.9951 6.18795 12.0057 6.18827 12.0162 6.18893L12.0147 6.18887H12.5995C12.7389 6.18887 12.8342 6.21179 12.8929 6.2622C12.9506 6.3062 13.0029 6.40887 13.0313 6.5482L14.1872 11.4505L15.4532 6.5482C15.4972 6.40152 15.5485 6.3062 15.5998 6.2622C15.6722 6.21562 15.7605 6.18795 15.8553 6.18795C15.8657 6.18795 15.8761 6.18829 15.8863 6.18893L15.8849 6.18887H16.566C16.6824 6.18887 16.7493 6.24845 16.7493 6.3722C16.7493 6.40887 16.7411 6.44552 16.7338 6.48952C16.7207 6.55954 16.703 6.62105 16.68 6.67996L16.6824 6.67287L14.9197 12.3287C14.8757 12.4754 14.8243 12.5698 14.7657 12.6138C14.6943 12.6602 14.607 12.6878 14.5132 12.6878C14.5043 12.6878 14.4955 12.6876 14.4867 12.6871L14.4879 12.6872H13.8581C13.7197 12.6872 13.6244 12.6652 13.5648 12.6138C13.5071 12.5625 13.4557 12.4672 13.4273 12.3205L12.2925 7.60148L11.165 12.3132C11.1283 12.4598 11.0852 12.5552 11.0275 12.6065C10.9679 12.6578 10.8652 12.6798 10.7342 12.6798L10.1053 12.6807ZM19.5067 12.8778C19.1262 12.8778 18.7458 12.8338 18.3801 12.7467C18.0143 12.6587 17.7292 12.5634 17.5386 12.4534C17.4212 12.3883 17.3415 12.315 17.3121 12.249C17.2848 12.1886 17.2686 12.1181 17.2681 12.0438V11.6706C17.2681 11.5175 17.3268 11.4441 17.4359 11.4441C17.4799 11.4441 17.5239 11.4515 17.5679 11.4661C17.6119 11.4808 17.6779 11.5101 17.7512 11.5395C17.9996 11.6495 18.27 11.7366 18.5561 11.7952C18.8485 11.8539 19.1336 11.8832 19.4269 11.8832C19.8871 11.8832 20.2464 11.8026 20.4948 11.6412C20.7245 11.5007 20.8755 11.2512 20.8755 10.9665C20.8755 10.9594 20.8754 10.9524 20.8752 10.9454L20.8752 10.9464C20.8754 10.9404 20.8755 10.9332 20.8755 10.9261C20.8755 10.7351 20.8003 10.5616 20.6779 10.4337L20.6782 10.434C20.5462 10.2955 20.2968 10.1709 19.9384 10.0535L18.8778 9.72354C18.3434 9.55579 17.9483 9.30736 17.7072 8.97829C17.4802 8.68827 17.3425 8.3188 17.3406 7.91723V7.91678C17.3406 7.6097 17.4075 7.33928 17.5386 7.1046C17.6706 6.87085 17.8456 6.66552 18.0656 6.5051C18.2856 6.33643 18.5331 6.21177 18.8265 6.12467C19.1198 6.03667 19.4269 6 19.7487 6C19.9091 6 20.0777 6.00733 20.2391 6.02933C20.4068 6.05133 20.5599 6.08065 20.7139 6.11C20.8606 6.14667 20.9999 6.18333 21.131 6.22642C21.263 6.27043 21.3657 6.31443 21.439 6.35843C21.5271 6.40341 21.6007 6.46525 21.6579 6.54023L21.659 6.54177C21.7002 6.60307 21.7248 6.67854 21.7248 6.75976C21.7248 6.76788 21.7245 6.77596 21.724 6.78395L21.7241 6.78285V7.1266C21.7241 7.2806 21.6654 7.36128 21.5554 7.36128C21.4519 7.34912 21.3579 7.31797 21.2738 7.2713L21.2776 7.27328C20.8796 7.09292 20.4145 6.98779 19.9249 6.98779C19.9068 6.98779 19.8886 6.98794 19.8706 6.98822L19.8733 6.98818C19.4562 6.98818 19.1262 7.05326 18.8998 7.1926C18.6725 7.33193 18.5561 7.54368 18.5561 7.84343C18.5561 8.04876 18.6294 8.22476 18.7761 8.36319C18.9218 8.50251 19.1922 8.64186 19.58 8.76651L20.6195 9.09469C21.1457 9.26336 21.527 9.49802 21.7534 9.79777C21.9798 10.0975 22.0898 10.4413 22.0898 10.8217C22.0898 11.1361 22.0238 11.4221 21.9001 11.6705C21.7681 11.9199 21.5921 12.139 21.3657 12.315C21.1383 12.4983 20.8679 12.6294 20.5535 12.7247C20.2235 12.8265 19.8807 12.8778 19.5067 12.8778V12.8778ZM20.8899 16.4345C18.4827 18.2128 14.9847 19.1561 11.978 19.1561C7.76319 19.1561 3.96633 17.5978 1.09716 15.0072C0.870734 14.8028 1.07516 14.5242 1.34649 14.6855C4.4485 16.4849 8.2756 17.5758 12.2338 17.5758C14.905 17.5758 17.8383 17.0193 20.5388 15.8781C20.9413 15.6947 21.285 16.1411 20.8899 16.4345ZM21.8928 15.2923C21.5848 14.8981 19.8578 15.1026 19.0749 15.1979C18.8412 15.2272 18.8045 15.0219 19.0172 14.8679C20.3922 13.9026 22.6536 14.1804 22.9167 14.5021C23.1798 14.8321 22.8434 17.0927 21.5554 18.1752C21.3584 18.3439 21.1677 18.2559 21.2557 18.0368C21.549 17.3126 22.1999 15.681 21.8928 15.2923Z"
                    />
                  </svg>
                </span>
              </div>
            </td>
            <td>
              aws-console-1
            </td>
            <td>
              This is an AWS Console app
            </td>
            <td>
              https://awsconsole-1.teleport-proxy.com
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  aws_account_id: A1234
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: two
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c37"
                kind="border"
                width="90px"
              >
                Launch
                <span
                  class="c38 icon icon-chevrondown"
                  color="text.slightlyMuted"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 24 24"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td
              style="user-select: none;"
            >
              <div
                class="c32"
                height="32px"
                width="32px"
              >
                <div
                  class="c28"
                  color="light"
                  font-size="3"
                >
                  C
                </div>
              </div>
            </td>
            <td>
              Cloud
            </td>
            <td>
              This is a Cloud specific app
            </td>
            <td>
              cloud://some-address
            </td>
            <td>
              <div
                class="c29"
              >
                <div
                  class="c30"
                  kind="secondary"
                >
                  env: dev
                </div>
                <div
                  class="c30"
                  kind="secondary"
                >
                  cluster: one
                </div>
              </div>
            </td>
            <td
              align="right"
            >
              <button
                class="c31"
                disabled=""
                kind="border"
                title="Cloud or TCP applications cannot be launched by the browser"
                width="88px"
              >
                LAUNCH
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <nav
        class="c39"
      >
        <div
          class="c40"
          width="100%"
        >
          <div
            class="c23"
          >
            <button
              class="c41 c42"
              title="Previous page"
            >
              <span
                class="c21 icon icon-circlearrowleft"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="c43 c42"
              title="Next page"
            >
              <span
                class="c21 icon icon-circlearrowright"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: #FFFFFF;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Applications
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Applications Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        applications
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
